crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/storage_layout_base_slot/out_of_range/generated/solc/0.8.29-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 6753] Error: The base slot of the storage layout evaluates to 2**256, which is outside the range of type uint256.
   ╭─[input.sol:5:22]
   │
 5 │ contract C layout at 2 ** 256 {}
   │                      ────┬───  
   │                          ╰───── Error occurred here.
───╯
